--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "node ./server.js"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.6.7",
+    "@grpc/proto-loader": "^0.6.13",
     "body-parser": "1.19.0",
     "chalk": "~1.1.3",
     "cookie-parser": "1.4.4",
@@ -16,8 +18,8 @@
     "express-jwt": "6.1.2",
     "forest-express-sequelize": "^8.0.0",
     "morgan": "1.9.1",
+    "pg": "~8.2.2",
     "require-all": "^3.0.0",
-    "sequelize": "~5.15.1",
-    "pg": "~8.2.2"
+    "sequelize": "~5.15.1"
   }
 }
